[tool.poetry]
name = "akka"
version = "0.1.0"
description = ""
authors = ["Ariel Fischer <ariel.fischer@qapio.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pykka = "^4.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
